# uta8alib

./: .gitignore  .gitmodules  .zaliases  CMakeLists.txt  Dockerfile  README.md  libtest.sh  test.sh  todo.md
.circleci/: config.yml
src/cpp/char_integer/: main.hpp
src/cpp/example/: main.hpp
src/cpp/include/: lib.hpp
src/cpp/mod_factorial/: main.hpp
src/rust/char_integer/: main.rs
src/rust/example/: main.rs
src/rust/mod_factorial/: main.rs
src/rust/next_permutation/: main.rs
test/cpp/: CMakeLists.txt  main.cpp
test/cpp/char_integer/: main.cpp
test/cpp/example/: main.cpp
test/cpp/mod_factorial/: main.cpp
test/rust/char_integer/: main.rs
test/rust/example/: main.rs
test/rust/next_permutation/: main.rs
